Bug 131959 - FILEOPEN DOCX Table left indent not imported from table style
Summary: FILEOPEN DOCX Table left indent not imported from table style
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: All All
: medium normal
Assignee: László Németh
URL:
Whiteboard: target:7.0.0
Keywords:
Depends on:
Blocks: DOCX-Tables
  Show dependency treegraph
 
Reported: 2020-04-07 13:49 UTC by NISZ LibreOffice Team
Modified: 2020-05-02 21:03 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the original document side by side in Word and Writer (109.98 KB, image/png)
2020-04-07 13:49 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-04-07 13:49:03 UTC
Created attachment 159392 [details]
Screenshot of the original document side by side in Word and Writer

Attachment #159261 [details] contains a nested table with 0.63 cm left indent defined in the table style.
This is not imported in Writer, so the table is not indented at all.

Steps to reproduce:
    1. Open attachment #159261 [details] 

Actual results:
The nested table starts at the left side of the parent table.

Expected results:
The nested table has left indent as set in the table style.

LibreOffice details:
Version: 7.0.0.0.alpha0+ (x64)
Build ID: 95ec2e9b024ff12a3005777c902d7e0975460b1d
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: CL
Comment 1 raal 2020-04-07 15:48:26 UTC
confirm with Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a) and
Version: 7.0.0.0.alpha0+
Build ID: aa191f35978ea48bbacc0e613ae8f0e6536ebcfc
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3;
Comment 2 Commit Notification 2020-04-08 12:15:57 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1b582b53596928be9e01e40ea287fbd4ed62996c

tdf#131959 DOCX: import tblInd from table style

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 BogdanB 2020-05-02 21:03:00 UTC
It's ok now

Verified on
Version: 7.0.0.0.alpha0+
Build ID: 05b87ae66ebccd06995cf530b860443ad9503b31
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3; 
Locale: ro-RO (ro_RO.UTF-8); UI-Language: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2020-05-02_10:14:58
Calc: threaded