tdf#131959 DOCX: import tblInd from table style

to fix left table indent when direct formatting
doesn't overwrite the table style.

Note: The imported values are adjusted
correctly according to the differences in
calculation of table indent positions. See
commit d2db4bc9507653a46fdea282d41b9683910a072f
(tdf#119760 docx: table starts at left, not mid-border).

Change-Id: Ieb6f078b3bd3605d538f2eedb7a5030784a738b3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/91765
Tested-by: Jenkins
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>